--- a/src/layouts/AppLayout/AppLayout.module.css
+++ b/src/layouts/AppLayout/AppLayout.module.css
@@ -24,7 +24,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: clip;
   flex: 1;
   padding: 4px;
 }
